# PastellaCore

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  CMakeLists.txt  Makefile  README.md  config.json  package-lock.json  package.json
src/: CMakeLists.txt  index.js  version.cmake  wallet-api.js
src/api/: APIServer.js
src/binaryinfo/: cryptotest.rc  daemon.rc  pastellawallet.rc  walletapi.rc
src/blockchainexplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h
src/cli/: InteractiveMode.js  NetworkWalletManager.js  WalletManager.js  index.js
src/common/: CheckDifficulty.cpp  CheckDifficulty.h  ConsoleHandler.cpp  ConsoleTools.cpp  ConsoleTools.h  PastellaTools.cpp  PastellaTools.h  SignalHandler.cpp  StringView.h  TransactionExtra.cpp  TransactionExtra.h  Util.cpp
src/config/: Ascii.h  CliHeader.h  Constants.h  PastellaCheckpoints.h  PastellaConfig.h  WalletConfig.h  version.h.in
src/contracts/: ContractEngine.js  ContractTransaction.js
src/crypto/: c_threads.h  crypto.cpp  crypto.h  hash-interface.cpp  hash-ops.h  hash.h  rx-slow-hash.c  tree-hash.c
src/cryptotest/: main.cpp
src/daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h  DaemonConfiguration.cpp  DaemonConfiguration.h
src/errors/: Errors.cpp  Errors.h  ValidateParameters.cpp  ValidateParameters.h
src/http/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/jsonrpcserver/: JsonRpcServer.cpp  JsonRpcServer.h
src/logging/: CommonLogger.cpp  ConsoleLogger.cpp  ILogger.cpp  ILogger.h
src/mnemonics/: CRC32.h  Mnemonics.h
src/models/: Block.js  Blockchain.js  BlockchainValidation.js  CheckpointManager.js  ForkManager.js  MemoryPoolManager.js  SpamProtection.js  Transaction.js  TransactionManager.js  UTXOManager.js  Wallet.js
src/monitor/: MonitorServer.js
src/network/: MessageHandler.js  NetworkPartitionHandler.js  NetworkSync.js  P2PNetwork.js  PeerDiscovery.js  PeerManager.js  SeedNodeManager.js  UPnPManager.js
src/nigel/: Nigel.cpp  Nigel.h
src/noderpcproxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
src/p2p/: ConnectionContext.h  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  NetNodeConfig.h  OnceInInterval.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pContextOwner.cpp  P2pContextOwner.h  P2pInterfaces.cpp  P2pInterfaces.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pProtocolDefinitions.h  PeerListManager.cpp  PeerListManager.h  PendingLiteBlock.h
src/pastellacore/: AddBlockErrorCondition.cpp  AddBlockErrorCondition.h  AddBlockErrors.cpp  AddBlockErrors.h  BlockValidationErrors.cpp  BlockValidationErrors.h  BlockchainCache.cpp  BlockchainCache.h  BlockchainMessages.cpp  BlockchainMessages.h  BlockchainReadBatch.cpp  BlockchainReadBatch.h  BlockchainStorage.cpp  BlockchainStorage.h  BlockchainUtils.cpp  BlockchainUtils.h  BlockchainWriteBatch.cpp  BlockchainWriteBatch.h  CachedBlock.cpp  CachedBlock.h  CachedTransaction.cpp  CachedTransaction.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreErrors.cpp  CoreErrors.h  CoreStatistics.h  Currency.cpp  Currency.h  DBUtils.cpp  DBUtils.h  DataBaseConfig.cpp  DataBaseConfig.h  DataBaseErrors.cpp  DataBaseErrors.h  DatabaseBlockchainCache.cpp  DatabaseBlockchainCache.h  DatabaseBlockchainCacheFactory.cpp  (+69 more)
src/pastellaprotocol/: IPastellaProtocolObserver.h  IPastellaProtocolQuery.h  PastellaProtocolDefinitions.h  PastellaProtocolHandler.cpp  PastellaProtocolHandler.h  PastellaProtocolHandlerCommon.h
src/pastellawallet/: AddressBook.cpp  AddressBook.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandImplementations.cpp  CommandImplementations.h  Commands.cpp  Commands.h  GetInput.cpp  GetInput.h  Menu.cpp  Menu.h  Open.cpp  Open.h  ParseArguments.cpp  ParseArguments.h  Sync.cpp  TransactionMonitor.cpp  Transfer.cpp  Transfer.h  Utilities.cpp  VanityWallet.cpp  VanityWallet.h  ZedWallet.cpp
src/rpc/: CoreRpcServerCommandsDefinitions.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h
src/serialization/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BinarySerializationTools.h  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h  ISerializer.h  IStream.h  JsonInputStreamSerializer.cpp  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryCommon.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  MemoryStream.h  PastellaSerialization.cpp  PastellaSerialization.h  SerializationOverloads.cpp  SerializationOverloads.h  SerializationTools.h
src/subwallets/: SubWallet.cpp  SubWallet.h  SubWallets.cpp  SubWallets.h
src/transfers/: BlockchainSynchronizer.cpp  BlockchainSynchronizer.h  CommonTypes.h  IBlockchainSynchronizer.h  IObservableImpl.h  SynchronizationState.cpp  SynchronizationState.h  TransfersConsumer.cpp  TransfersConsumer.h  TransfersContainer.cpp  TransfersContainer.h  TransfersSubscription.cpp  TransfersSubscription.h  TransfersSynchronizer.cpp  TransfersSynchronizer.h  TypeHelpers.h
src/utilities/: Addresses.cpp  Addresses.h  FormatTools.cpp  FormatTools.h  ParseExtra.cpp  ParseExtra.h  Utilities.cpp  Utilities.h
src/utils/: MessageValidator.js  atomicUnits.js  auth.js  configLoader.js  constants.js  crypto.js  logger.js  validation.js  velora.js  wordList.js
src/wallet/: WalletAsyncContextCounter.cpp  WalletAsyncContextCounter.h  WalletErrors.cpp  WalletErrors.h  WalletGreen.cpp  WalletGreen.h  WalletIndices.h  WalletSerializationV2.cpp  WalletSerializationV2.h  WalletUtils.cpp  WalletUtils.h
src/walletapi/: ApiDispatcher.cpp  ApiDispatcher.h  (+3 more)
(+51 files in other folders)
